# HPCC-Platform

./: 404.html  BUILD_ME.html  CMakeLists.txt  README.html  hashmap.json  index.html  version.cmake
docs/EN/: CMakeLists.txt
docs/EN/DynamicESDL/: DynamicESDL_Includer.xml~
docs/EN/ECLLanguageReference/: Params.txt
docs/EN/ECLLanguageReference/ECLR-includer-01/: ABS.html  ACOS.html  AGGREGATE.html  ALL.html  ALLNODES.html  APPLY.html  ASCII.html  ASIN.html  ASSERT.html  ASSTRING.html  ATAN.html  ATAN2.html  AVE.html  Actions_and_Attributes.html  Actions_as_Attributes.html  An_Example_Service.html  An_XOR_Operator.html  Arithmetic_Operators.html  Attribute_Definition.html  Attribute_Name_Rules.html  Attribute_Naming.html  Attribute_Visibility.html  Attribute_Visibility_Rules.html  Attributes_as_ActionsAttributes_as_Actions.html  Attributes_versus_Actions.html  BEGINCplus_Structure.html  BETWEEN_Operator.html  BOOLEAN.html  BUILD.html  BUILD_a_Payload_Index.html  BUILD_a_Query_Library.html  BUILD_an_Access_Index.html  BUILD_from_an_INDEX_Definition.html  Basic_Attribute_Types.html  Bitshift_Operators.html  Bitwise_Operators.html  Boolean_Attributes.html  BuiltinFunction_PROJECT.html  CASE.html  CATCH.html  (+365 more)
docs/EN/ECLLanguageReference/ECLR-includer-02/: ABS.html  ACOS.html  AGGREGATE.html  ALL.html  ALLNODES.html  APPLY.html  ASCII.html  ASIN.html  ASSERT.html  ASSTRING.html  ATAN.html  ATAN2.html  AVE.html  Accessing_Field-level_Data_in_a_Specific_Record.html  Actions_as_Attributes.html  Alien_Data_Types.html  An_XOR_Operator.html  Arithmetic_Operators.html  Attribute_Definition.html  Attribute_Name_Rules.html  Attribute_Visibility.html  Attribute_Visibility_Rules.html  Attributes_as_ActionsAttributes_as_Actions.html  BEGINCplus_Structure.html  BETWEEN_Operator.html  BOOLEAN.html  BUILD.html  BUILD_a_Query_Library.html  Basic_Attribute_Types.html  BeginCPP_Available_Options.html  Bitshift_Operators.html  Bitwise_Operators.html  Boolean_Attributes.html  Built-in_Functions_and_Actions.html  BuiltinFunction_PROJECT.html  CASE.html  CATCH.html  CHECKPOINT.html  CHOOSE.html  CHOOSEN.html  (+366 more)
docs/EN/ECLPlayground/: ECLPlayground-includer.xml~
docs/EN/ECLPlayground/ECLPlay-Mods/: ECL_Playground.xml~
docs/EN/ECLReference/: ECLReference.chm  ECLReference.chw
docs/EN/ECLScheduler/ECLSched-Mods/: ECLSchedComp.xml~
docs/EN/ECLStandardLibraryReference/ECLStandardLibraryRef/: AbortDfuWorkunit.html  AddFileRelationship.html  AddSuperFile.html  AdjustCalendar.html  AdjustDate.html  Apply2Cells.html  Audit.html  Auditing.html  BLAS.html  BLASTrace.html  BLASTypes.html  CleanAccents.html  CleanSpaces.html  ClearSuperFile.html  Cluster_Handling.html  CmdProcess.html  CompareAtStrength.html  CompareFiles.html  CompareIgnoreCase.html  Contains.html  Copy.html  CountWords.html  CreateExternalDirectory.html  CreateSuperFile.html  CurrentDate.html  CurrentTime.html  DaliServer.html  DateFromParts.html  Date_Data_Types.html  Date_Handling.html  Day.html  DayOfYear.html  DaysBetween.html  DeSpray.html  Debugging.html  DeleteExternalFile.html  DeleteLogicalFile.html  DeleteSuperFile.html  DfuPlusExec.html  Double.html  (+155 more)
docs/EN/ECLWatch/: TheECLWatchMan.xml~
docs/EN/HPCCClientTools/CT_Mods/: CT_Comm_Line_DFU.rtf  CT_ECL_IDE.xml~
docs/EN/HPCCDataTutorial/DataTutorial/: Begin_Coding.html  DataTutorialIntroduction.html  Deploy_the_Query_to_Roxie.html  Deploy_the_Roxie_Query.html  Examine_the_Data.html  Execute-using-the-Data-Delivery-Engine.html  Index_the_Data.html  Introduction_Case-Study-and-Tutorial.html  Process_the_Data.html  Publishing_your_Query.html  Query_the_Data.html  Run_the_Roxie_Query.html  Spray_the_Data_File_to_your_DR-THOR_Cluster.html  Summary.html  The_Original_Data.html  Uploading_a_file.html  Using_our_Data.html  Working_with_Data.html  index.html  toc.xml
docs/EN/HPCCSystemAdmin/: HPCCSystemAdministratorsGuide.xml~
docs/EN/HPCCSystemAdmin/SA-Mods/: RestoreThorNOTES.txt
docs/EN/IMDB/IMDB/: Analyze_the_data.html  Examine_The_Data.html  Get_a_data_file.html  Getting_Useful_Info_from_Data.html  Links_and_Degrees_of_Separation.html  Load_the_Incoming_Data.html  Next_Steps.html  Processing_the_Data_E-T-L.html  Processing_the_data.html  Spray_the_Data_to_THOR.html  index.html  (+4 more)
docs/EN/Installing_and_RunningTheHPCCPlatform/: Installing_and_RunningTheHPCCPlatform.xml~
docs/EN/RuningHPCCinAmazonWebServicesEC2/: RuningHPCCinAmazonWebServicesEC2.xml~
docs/EN/UsingConfigManager/: Document1.txt  Document2.txt
docs/PT_BR/: CMakeLists.txt
docs/PT_BR/PortalHTML/: CMakeLists.txt
(+660 files in other folders)
